# fungal-jungle

./: Cargo.toml
src/: camera.rs  diagnostics.rs  game.rs  macrosim.rs  main.rs
src/engine/: mod.rs
src/engine/ecs_tilemap/: array_texture_preload.rs  lib.rs  mod.rs
src/engine/ecs_tilemap/helpers/: filling.rs  geometry.rs  projection.rs  transform.rs
src/engine/ecs_tilemap/render/: chunk.rs  draw.rs  extract.rs  material.rs  mod.rs  (+3 more)
src/engine/fast_tilemap/: bundle.rs  map.rs  map_builder.rs  map_uniform.rs  plugin.rs
src/engine/macro_tilemap/: bundle.rs  map.rs  map_builder.rs  map_uniform.rs  mod.rs  plugin.rs  shader.rs
src/engine/pancam/: lib.rs
src/io/: image.rs
src/jungle_noise/: generator.rs  mod.rs  source.rs  tidal.rs
src/jungle_noise/adapters/: abs.rs  add.rs  billow.rs  blend.rs  clamp.rs  displace.rs  exp.rs  fbm.rs  lambda.rs  max.rs  min.rs  mul.rs  neg.rs  pow.rs  power.rs  product.rs  ridgedmulti.rs  rotate.rs  scale.rs  select.rs  sum.rs  translate.rs
src/jungle_noise/sources/: checkerboard.rs  constant.rs  custom.rs  improved_perlin.rs  perlin.rs  simplex.rs  value.rs  worley.rs
src/jungle_noise/utils/: noisebuf.rs
src/macro_map/: macro_map.rs  macromap.rs  mod.rs  tile.rs  tiling_strategy.rs
src/macro_map/chunking/: chunk_generation.rs  mod.rs  noise_layers.rs
src/macro_map/jungle_noise/: generator.rs  mod.rs  source.rs
src/macro_map/terrain/: mod.rs  noise_layers.rs  terrain_chunks.rs  tiling.rs
src/noise/: mod.rs  perlin.rs  worley.rs
src/noise_wrapper/: mod.rs  perlin.rs  scale_on_axis.rs  tidal.rs  worley.rs
(+52 files in other folders)
